# multi-faceted-network-based-resilience-assessment

./: .gitignore  README.md  pyproject.toml
data/01_SRA_survey/: Cronbach's Alpha analysis_dataset.xlsx
data/02_relational_network/de/: answers.tsv  baseline_scores.tsv  de_edges.csv  de_nodes.csv  participants.tsv  questions.tsv
data/03_spatial_network/: Babaeski_SN_matrix.xlsx  Dannenberg_SN_matrix.xlsx  Lüchow_edge_list.csv  Lüleburgaz_SN_matrix.xlsx  Lüleburgaz_node_list.csv  Lüneburg _SN_matrix.xlsx  Lüneburg_node_list.csv  Makro_Lüneburg_SN_Matrix.xlsx  Makro_Trakya_SN_Matrix.xlsx
data/datasets/: All_Datasets_Standardized_rev.xlsx  DE_Luchow_Dannenberg_Dataset_rev.csv  DE_Luneburg_District_Dataset_rev.csv  DE_Luneburg_Region_Dataset_Rev.csv  TR_Babaeski_Dataset_rev.csv  TR_Luleburgaz_Dataset_rev.csv  TR_Trakya_region_dataset_rev.csv
data/kmeans/: DE_Luchow_Dannenberg_Dataset.csv  DE_Luneburg_District_Dataset.csv  TR_Babaeski_Dataset.csv
nbra/: __init__.py  ari_test.py  network_analysis.py
notebooks/: K_means.ipynb  RNA.ipynb
results/01_SRA_survey/: Cronbach's Alpha_results.xlsx  Survey_results_avg_values.xlsx
results/03_spatial_network/: Babaeski_edge_list.csv  Babaeski_node_list.csv  Lüchow_node_list.csv  Lüleburgaz_edge_list.csv  Lüneburg_Region_edge_list.csv  Lüneburg_Region_node_list.csv  Lüneburg_edge_list.csv  Trakya_Region_edge_list.csv  Trakya_Region_node_list.csv  robustness_combined_binary_exponential.csv
results/05_kmeans/: k-means_centroids.xlsx  k-means_settlements_groups.xlsx
scripts/: SNA_robustness.py  correlation_analysis.r
(+88 files in other folders)
